# zetesis

./: .gitignore  AGENTS.md  BACKLOG.md  Cargo.toml  DECISIONS.md  SPEC  SPEC.md  TODO  justfile
.github/workflows/: ci.yml
config/: settings.example.toml
crates/ai-ox/src/model/gemini/: embedding.rs
crates/zetesis-app/: Cargo.toml
crates/zetesis-app/src/: constants.rs  error.rs  lib.rs  main.rs  paths.rs  pdf.rs
crates/zetesis-app/src/cli/: audit.rs  db.rs  db_delete.rs  debug.rs  fetch_kio.rs  ingest.rs  jobs.rs  mod.rs  search.rs  serve.rs  silo.rs  source.rs  sys.rs  validators.rs
crates/zetesis-app/src/config/: mod.rs
crates/zetesis-app/src/index/: deleter.rs  milli.rs  mod.rs  writer.rs
crates/zetesis-app/src/ingestion/: kio_saos.rs  kio_types.rs  kio_uzp.rs  manifest.rs  mod.rs
crates/zetesis-app/src/pipeline/: extract.rs  index_payload.rs  mod.rs  processor.rs  structured.rs
crates/zetesis-app/src/server/: mod.rs
crates/zetesis-app/src/services/: backup.rs  batch_ocr.rs  batch_structured.rs  blob_store.rs  context.rs  embed.rs  embed_rig.rs  indexer.rs  jobs.rs  message.rs  milli_actor.rs  mod.rs  normalize.rs  ocr.rs  orchestrator.rs  pdf.rs  polish_segmenter.rs  processor.rs  reaper.rs  search.rs  structured.rs  text_cleanup.rs  usage.rs
crates/zetesis-app/src/text/: mod.rs  segmenter.rs
crates/zetesis-app/tests/: config_precedence_spec.rs  db_delete_e2e.rs  healthz_spec.rs  ingest_e2e.rs  jobs_e2e.rs  kio_scraper_e2e.rs  pdfium_smoke.rs  polish_segmenter_spec.rs  search_routes_spec.rs
crates/zetesis-app/tests/fixtures/: polish_segmenter_cases.yml
crates/zetesis-server/: Cargo.toml
crates/zetesis-server/src/: config.rs  lib.rs  search.rs  server.rs
docs/: agi-context.md  architecture.md  chunk_coverage_kio_5430.md  data-quickstart.md  embeddings.md  ocr_costs.md  storage-s3.md
scripts/: audit_structured.sh  count_pdf_pages.py  download_pdfium.sh
