[package]
name = "zetesis-app"
version = "0.1.0"
edition = "2024"
authors = ["ribelo"]
license = "MIT"

[dependencies]
ai-ox = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
config = { workspace = true }
csv = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
futures-concurrency = { workspace = true }
governor = { workspace = true }
heed = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
milli = { workspace = true }
mime = { workspace = true }
nalgebra = { workspace = true }
owo-colors = { workspace = true }
pdfium-render = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
pulldown-cmark = { workspace = true }
