[package]
name = "zetesis-app"
version = "0.1.0"
edition = "2024"
authors = ["ribelo"]
license = "MIT"

[dependencies]
ai-ox = { workspace = true, features = ["gemini"] }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
config = { workspace = true }
csv = { workspace = true }
directories = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
futures-concurrency = { workspace = true }
governor = { workspace = true }
heed = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
milli = { workspace = true }
mime = { workspace = true }
nalgebra = { workspace = true }
owo-colors = { workspace = true }
pdfium-render = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
pulldown-cmark = { workspace = true }
icu_segmenter = { workspace = true }
image = { workspace = true }
deepinfra-ox = { workspace = true }
gemini-ox = { workspace = true }
flume = "0.11"
inquire = "0.9.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tower-http = { version = "0.5", features = ["trace", "request-id", "cors"] }
aws-config = { version = "1.5", optional = true }
aws-sdk-s3 = { version = "1.69", optional = true }
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
serde_yaml = "0.9"
proptest = "1.9"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["http1"] }
http-body-util = "0.1"

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
cli-debug = []
